--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/krew-live/tech-interview#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "mongodb": "^3.6.8",
     "mongodb-memory-server": "^6.9.6"
   },
   "devDependencies": {
