--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --trace-warnings server/index.js",
+    "start": "nodemon --watch server --trace-warnings server/index.js",
     "build": "webpack --config webpack.config.dev.js --progress --color",
     "watch": "webpack --config webpack.config.dev.js --progress --color --watch"
   },
